--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.content-home{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.bingkai{
+  border:  1px solid;
+  width: 250px;
+  margin: 10px;
+  padding: 10px;
+}
+
+.tombol{
+  color:white;
+  margin-top: 10px;
+}
+.delete{
+  background: rgb(252, 60, 60);
+  width: 60px;
+}
+.update{
+  width: 60px;
+  background-color:rgb(96, 96, 255);
+  margin-right: 5px;
+}
+.add{
+  width: 90px;
+  height: 40px;
+  background-color:rgb(96, 96, 255);
+  margin-left: 5px;
+  color: white;
+}
+/* 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -24,4 +58,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
