--- a/app/globals.css
+++ b/app/globals.css
@@ -3,16 +3,71 @@
 @tailwind utilities;
 
 
+:root {
+  --grey:rgb(223, 223, 223);
+  --black: rgb(66, 66, 66);
+}
+
+html,body{
+  height: 100%;
+}
+body{
+  background-color: rgb(250, 250, 250) ;
+  color: var(--black);
+}
+
+
 .content-home{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  border: 2px solid var(--grey);
+  /* 100 itu dari 90px tinggi seluruh navbar + dengan 10px agar tidak mepet bawah*/
+  height: calc(100% - 100px); 
+  border-radius: 10px;
+  margin: 0px 30px;
+  overflow-y: scroll;
 }
 .bingkai{
-  border:  1px solid;
+  position: relative;
+  background-color: rgb(253, 243, 180);
+  border-radius: 5px;
   width: 250px;
   margin: 10px;
-  padding: 10px;
+  padding: 15px;
+  height: 230px;
+  box-shadow: 4px 6px 5px 0px rgb(0 0 0 / 20%);
+}
+.bingkai h1{
+  font-family: system-ui;
+  font-size: 20px;
+  font-weight: 700;
+    margin-bottom: 5px;
+}
+.title-item{
+   display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.title-item span{
+  margin-right: 6px;
+  font-weight: 500;
+  font-family: cursive;
+  cursor: pointer;
+}
+
+.bingkai p{
+  font-family: math;
+  height: 110px;
+  text-align: justify;
+}
+.update-card-button{
+  bottom: 0;
+  right: 0;
+  margin: 15px;
+  position: absolute;
+  font-size: 20px;
+  cursor: pointer;
 }
 
 .tombol{
@@ -29,12 +84,63 @@
   margin-right: 5px;
 }
 .add{
-  width: 90px;
+  border-radius: 5px;
+  width: 115px;
   height: 40px;
   background-color:rgb(96, 96, 255);
   margin-left: 5px;
   color: white;
+  margin-top: 10px;
 }
+
+/*====== navbar style ========*/
+.nav{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid salmon; */
+  height: 90px;
+  margin:0px 30px;
+  padding-left: 10px;
+}
+
+.title-main{
+  font-size: 35px;
+  font-weight: 700;
+}
+
+.add-note-nav{
+  background-color: var(--grey);
+  width: 35px;
+  height: 35px;
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 3px;
+  margin-left: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+
+/* ======= Form Style ======== */
+form{
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+textarea{
+  width: 278px;
+  height: 140px;
+  text-align: justify;
+  font-family: math;
+}
+/* form input:nth-child(2){
+  width:100px;
+} */
+
 /* 
 :root {
   --foreground-rgb: 0, 0, 0;
